# ai-news-radar

./: .env.example  CLAUDE.md  pyproject.toml
.github/workflows/: news-radar.yml
data/: state.json
src/: config.py  feeds.py  main.py  notifier.py  notion_writer.py  prompts.py  state.py  summarizer.py
