[project]
name = "ai-news-radar"
version = "0.1.0"
description = "AI news aggregator with Gemini digest generation, Notion recording, and Slack notification"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31",
    "google-genai>=1.0",
    "python-dotenv>=1.0",
    "feedparser>=6.0",
    "notion-client>=2.0",
    "beautifulsoup4>=4.12",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
